<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl_not_used"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/color_F5F5F5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <com.scwang.smart.refresh.header.ClassicsHeader
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srlTextFailed="@string/refresh_failed"
                app:srlTextFinish="@string/refresh_success"
                app:srlTextPulling="@string/pull_down_to_refresh"
                app:srlTextRefreshing="@string/refreshing"
                app:srlTextRelease="@string/release_to_refresh"
                app:srlTextUpdate="@string/last_update" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:id="@+id/scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/pt_15"
                    android:fillViewport="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_not_used"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_unused_coupons" />

                        <LinearLayout
                            android:id="@+id/ll_empty"
                            android:layout_width="match_parent"
                            android:layout_height="0pt"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <ImageView
                                android:layout_width="@dimen/pt_42"
                                android:layout_height="@dimen/pt_54"
                                android:src="@drawable/ic_none_records" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/pt_8" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/count_none_unused_coupons"
                                android:textColor="@color/color_A3A3A3"
                                android:textSize="@dimen/sp_14" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

<!--                <FrameLayout-->
<!--                    android:id="@+id/top"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="bottom|end"-->
<!--                    android:layout_marginBottom="@dimen/pt_30"-->
<!--                    android:visibility="gone">-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:clickable="false"-->
<!--                        android:focusable="false"-->
<!--                        android:focusableInTouchMode="false"-->
<!--                        android:src="@drawable/count_01" />-->

<!--                    <ImageView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:clickable="false"-->
<!--                        android:focusable="false"-->
<!--                        android:focusableInTouchMode="false"-->
<!--                        android:src="@drawable/count_02" />-->
<!--                </FrameLayout>-->
            </FrameLayout>
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>