<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.GiftExchangeActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F5F5F5"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/top_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pt_30">

                <RelativeLayout
                    android:id="@+id/img_back"
                    android:layout_width="@dimen/pt_70"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="@dimen/pt_15"
                        android:layout_height="@dimen/pt_15"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/pt_10"
                        android:clickable="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:src="@drawable/ic_back_black" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/count_gift_exchange"
                    android:textColor="@color/color_101828"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="@dimen/pt_25"
                android:layout_below="@id/rl_top">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/pt_20"
                    android:text="@string/my_count"
                    android:textStyle="bold"
                    android:textColor="@color/color_101828"
                    android:textSize="@dimen/sp_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/pt_20"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/rl_icon"
                        android:layout_width="@dimen/pt_25"
                        android:layout_height="@dimen/pt_25"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/bg_count" />

                    <TextView
                        android:id="@+id/tv_count_win"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/pt_5"
                        android:textColor="@color/color_101828"
                        android:text="1100"
                        android:textSize="@dimen/sp_20" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pt_10"
            android:layout_marginLeft="@dimen/pt_10"
            android:layout_marginRight="@dimen/pt_10"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/pt_24"
                android:layout_weight="1"
                android:addStatesFromChildren="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/gift_list_search_background">

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="@dimen/pt_10"
                    android:layout_height="@dimen/pt_10"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/pt_5"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/pt_8"
                    android:layout_marginEnd="@dimen/pt_7"
                    android:background="@null"
                    android:hint="@string/enter_exchange_name"
                    android:imeOptions="actionSearch"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_A3A3A3"
                    android:textSize="@dimen/sp_14" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:drawableStart="@drawable/ic_count_back"
                android:drawablePadding="8dp"
                android:text="@string/count_newest_to_oldest_date"
                android:textColor="@color/color_101828"
                android:textSize="16sp" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.scwang.smart.refresh.layout.SmartRefreshLayout
                android:id="@+id/srl_product_Coupons"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <com.scwang.smart.refresh.header.ClassicsHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srlTextFailed="@string/refresh_failed"
                    app:srlTextFinish="@string/refresh_success"
                    app:srlTextPulling="@string/pull_down_to_refresh"
                    app:srlTextRefreshing="@string/refreshing"
                    app:srlTextRelease="@string/release_to_refresh"
                    app:srlTextUpdate="@string/last_update" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_goods_list"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/pt_10"
                        android:layout_marginRight="@dimen/pt_10"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:listitem="@layout/item_goods_new_detail" />
                </LinearLayout>
            </com.scwang.smart.refresh.layout.SmartRefreshLayout>

            <LinearLayout
                android:id="@+id/ll_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/pt_42"
                    android:layout_height="@dimen/pt_54"
                    android:src="@drawable/ic_none_records" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/pt_8" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/count_none_gift"
                    android:textColor="@color/color_A3A3A3"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>