<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.CountHistoryActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_top">
        <RelativeLayout
            android:id="@+id/rl_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pt_42">

            <RelativeLayout
                android:id="@+id/img_back"
                android:layout_width="@dimen/pt_70"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/pt_15"
                    android:layout_height="@dimen/pt_15"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/pt_10"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:src="@drawable/ic_back_black" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/count_win_points"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fl_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/pt_102"
            android:orientation="vertical"
            android:paddingTop="@dimen/pt_9"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pt_20"
                android:layout_marginRight="@dimen/pt_20"
                android:layout_marginBottom="@dimen/pt_5"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/rl_icon"
                    android:layout_width="@dimen/pt_35"
                    android:layout_height="@dimen/pt_35"
                    android:layout_centerInParent="true"
                    android:src="@drawable/bg_count" />

                <TextView
                    android:id="@+id/tv_count_hawks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/pt_8"
                    android:text="1000"
                    android:layout_toEndOf="@id/rl_icon"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_36" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/pt_16"
                android:gravity="center"
                android:text="有效期限 2026/10/31 09:00"
                android:textColor="@color/color_6A7282"
                android:textSize="@dimen/sp_12" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_30"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_obtained_records"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_obtained_records"
            android:textColor="@color/color_4A5565"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/tv_usage_records"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/count_usage_records"
            android:textColor="@color/color_4A5565"
            android:textSize="@dimen/sp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pt_2"
        android:layout_marginTop="-4pt"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view_obtained_records_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_E2518D"
            android:gravity="center"
            android:layout_marginStart="@dimen/pt_25"
            android:layout_marginEnd="@dimen/pt_75"/>

        <View
            android:id="@+id/view_usage_records_select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ad_obtained_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/pt_20"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_count_records" />

    <LinearLayout
        android:id="@+id/ll_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/pt_42"
            android:layout_height="@dimen/pt_54"
            android:src="@drawable/ic_none_records" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/pt_8" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/count_none_records"
            android:textColor="@color/color_A3A3A3"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</LinearLayout>
</layout>